--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,156 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>july . 01 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/9CA8vG4.gif"/><br>
+many new things are coming soon <img src="https://i.imgur.com/2417xmz.png"/><br>
+as you may know, some of my projects have been standing for some time because of some important things i've been doing lately. i'm actually quite busy with these things, but i've been reflecting on all my projects and realized that i should not let them totally stand still for so long. they all exist for a reason and keeping them active would help me a lot to practice my skills in different areas, after all they were created to motivate me to study and always be using my creativity ! also, they have a story behind, i care for them.<br>
+i always value my hobbies because they make me happy, even if i know i'm not so talented at everything i do, i think it's worth doing my best to keep doing it. i will continue updating all my projects even if it is with a lower frequency ; being occupied with other things is not a justification to abandon them ! <img src="https://i.imgur.com/luE544t.gif"/><br>
+i'm feeling pretty motivated so i'm certainly updating all my projects.<br>
+<br>
+some people liked it, so today i have again some little things that i have embroidered :<br>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/cqOL9w9.png"/></center>
+
+<br>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1397&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+so ?<br>
+i think it's very cute <img src="https://i.imgur.com/PUJ4Ggb.gif"/><br>
+<br>
+maybe you have seen that i posted a new html stuff, an aesthetic virtual journal !!<br>
+i had this idea randomly when i was doing collage. i love doing this and i always have several journals with different aesthetics, stationery is one of my big passions ! i also like to put pieces of fabric, ribbons, buttons, even beautiful packaging.<br>
+i've always wanted to somehow do this digitally, but i have never really tried, until now. it's actually easy, and a lot of fun ♡ !!<br>
+i took the opportunity to offer you some cute thematic materials that you can use for decoration, digitally or even printed. not all the stuff that i offer in these packs are mine, these are just things that i have saved here, so if anyone doesn't want their content to be included please let me know ///<br>
+i intend to keep making new pages, so stay tuned <img src="https://i.imgur.com/sWD1PMF.gif"/><br>
+the domain is literally cute ( cute.home.kg ) and i'll leave a backup file for every page i make :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/VZmuGK3.png"/></center>
+<br><br>
+<center><a href="https://mega.nz/#!wphTHY7L!4g7cHJvwh3oFfYRGmyM6R_z7q355ABdZ0x3hbj5sy00" id="linkbjinho" target="_blank">soft milk html .rar</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/omE4Ax3.gif"/>&nbsp;&nbsp; { &nbsp;1516&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/SJEUa0i.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i honestly am very proud of this, i thought it would be just something cute but it became very beautiful !<br>
+i would also like to receive some feedback for the little music i used :<br>
+<br><br>
+
+<center><a href="https://files.catbox.moe/15tyof.mp3" id="linkbjinho" target="_blank">tiptoes .mp3</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/7zvWsMq.gif"/>&nbsp;&nbsp; { &nbsp;1476&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/5w5TqhO.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+so.. this may seem like another personal q&a, but i consider it more as an important observation about how you see me and also other people.<br>
+<br><br>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+i would like to vent some things because i receive several messages and i know that although i am not of great influence, i still have responsibility with people who expect things from me and see me as an example in any aspect. it's natural that you overestimate me, since i'm on the internet and just post my best ; but it's important that i be modest & honest enough with you so this is not a problem and make you have the wrong idea about me ///<br>
+everything i'll write here i hope you also remember when observing other people :<br>
+i usually say my personal opinion on these q&a texts. this is important to note, because although i always hope to be helping someone to think about these issues, i never expect you to agree with what i say or assume as correct. is my opinion, my point of view, the way i thought to get where i am today. tomorrow i can change, and i hope so. if i change, i will tell you my new thoughts. you may have a completely different view of the things i write here and be happy in your own way, but at least for me it is always good to see other people's sincere opinions to refine mine. read my texts as an external opinion, think carefully about it and think about your own opinions.<br>
+i am not perfect. that's obvious, but people tend to think girls on the internet are perfect. i can say that i always do my best and i work hard every day for this. i'm not super talented in most of the things i do and so i'm always studying and practicing. i post the best i do, even if not super good or important things, because i like to receive criticism. it helps me a lot to improve ! my own opinion can help me, since i'm a perfectionist, but sometimes we're just tired and let it go, you know. i can say that i am today the best and most perfect that i could be, within my experiences and reality. tomorrow i'll be better, and so on. if i have to be an example to someone, i want to be an example of motivation, because you should never copy others and try to be like them, you have to be yourselves and the best you can be in this way !<br>
+i would also like to talk about my appearance, even though i rarely post pictures of myself, this is a serious topic, since the biggest negative influence that internet girls give others is their perfect ( super edited ) photos and the lack of integrity in saying they are not perfect in real life...<br>
+so, about me, being quite honest, i think i am pretty. other people have always said that i am pretty, but that doesn't seem true until i clear my mind ; i like almost everything about my appearance, what took time to happen, since i have my insecurities as well. i still have some things about myself that i would like to improve, and i intend to do so in the future. although i take great care of my skin, it is very sensitive and i usually have allergies from time to time, so i have some spots that i could not repair on my own. there are procedures to help with this, but they are a little expensive, so at the moment i just accepted, these are marks of difficulties that my skin has gone through, that's okay. and i'm very lucky because all the skin that is exposed, like my face, has no marks, so it's something that only those who know me more intimately have already seen ; ;<br>
+obviously, anyway, my skin may look like porcelain in the pictures, but in real life it's normal skin, i have pores, you know.. i take care of it a lot and i have to clean and moisturize every day to keep it nice, just like everyone else ! i do not wear makeup often and i always use sunscreen, so i think this helps a lot. i can talk more about skin care in another post, as well as about makeup i use.<br>
+my pictures are pretty blurry and have filters, not only because my camera is really bad, but also because i like to make the pictures a little blurry to soften everything and to use filters to adjust the lighting. i do it with all the pictures, not just those of my face, if you notice. when i have a better camera, i can try to take more natural pictures, i would like to try !<br>
+last, but not less important, numbers : numbers are not something you should ever take as a basis for success, numbers are extremely inconsistent and are not always real people. even the numbers you can see on my website may seem like a big deal, but they are not consistent as well, since they count the same ips over and over again. and this a problem that exists even on large websites, or do you really think millions, billions of people watched the same video as you ? then, you should only consider real people, always. and a large amount of public is not always something to be proud of, since many people who are not good, lie a lot & are toxic, have many fans. always think of those people who send you sincere, truthful messages that not only praise you but also want you to improve as a person. these messages are what i always consider important and i love receiving them ! i get sad about receiving rude messages, especially when they don't make sense, but even some rude messages can help me mature and improve. i always ask people to be kind to each other, but if i made you angry for any reason, do not hesitate to tell me the reasons, because i don't want to hurt anyone, i am always open to improving and learning new things. i'm no better than neither of you, i'm just better than myself every passing day. we're all here to help each other, not to act superior !!<br>
+never support people who make you intentionally feel inferior and less capable than them, who make you feel ugly and useless. you can always be a great person, smart, mature, beautiful, you have the right to have hobbies ( even if you're not so talented right now ) ; you can be perfect, within your reality. your personality may not be 100% ideal, but you're sure to find the balance so this will not get in the way of you improving and being a good person. be pure, be yourself, always ♡<br>
+( oh, and, it's okay to feel sad and negative sometimes, making mistakes is normal, we just have to work hard not to keep it that way )<br>
+<br><br>
+did my huge text help motivate you in any way ? i hope so <img src="https://i.imgur.com/3gkUBIB.gif"/><br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/hjx5oJC.png"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1493&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;0&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/P2CtFZy.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
