--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@ position: relative;
 <br><br><center><div id="update" style="background-image:url(https://i.imgur.com/HgFke6Y.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 100px; text-align: justify; font-family: Verdana; font-size:7px; line-height: 100%">
 <center><img src="https://i.imgur.com/bwAaPW7.gif"></center>
 <br><br>
+　08/15 <img src="https://i.imgur.com/y9S1bJ8.gif"> game on: <font color="#DFB7B7">gaming page</font><br>
+　08/15 <img src="https://i.imgur.com/y9S1bJ8.gif"> look idea on: <font color="#DFB7B7">look book</font><br>
+　08/13 <img src="https://i.imgur.com/y9S1bJ8.gif"> music on: <font color="#DFB7B7">potetomid</font><br>
 　08/09 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 　08/08 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
 　08/04 <img src="https://i.imgur.com/y9S1bJ8.gif"> html stuff on: <font color="#DFB7B7">links page</font><br>
 　08/02 <img src="https://i.imgur.com/y9S1bJ8.gif"> tips on: <font color="#DFB7B7">help page</font><br>
 　08/01 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
-　07/31 <img src="https://i.imgur.com/y9S1bJ8.gif"> music on: <font color="#DFB7B7">potetomid</font><br>
-　07/27 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
-　07/26 <img src="https://i.imgur.com/y9S1bJ8.gif"> tips on: <font color="#DFB7B7">help page</font><br>
 </div></center>
 
 <br>
@@ -364,7 +364,7 @@ position: relative;
     border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/4pQ4HlC.png); font-size:8px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com/"><img src="https://i.imgur.com/SS3uOVJ.png"></a></textarea>
 <br><br><br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . august . 09</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . august . 15</font></font></font>
 <br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#998c58">-ˏˋ </font><font color="#f9c7c7">♡</font><font color="#d8bf2d"> 1 year anniversary </font><font color="#f9c7c7">♡</font><font color="#998c58"> ˊˎ-</font></font></font>
 <br><br>
