--- a/gaming.html
+++ b/gaming.html
@@ -1192,7 +1192,18 @@ besides, i love everything that is related to beatrix potter, of course.
 <img width="300" height="auto" src="https://i.imgur.com/DdZvL5U.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/rvbyqvl.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/7aWMy7K.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/aVbo91f.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/aVbo91f.png"/>
+<br><br><br></center>
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+this is another beautiful game from the same creators. it's the game that i'm more focused on right now, it's amazing and so much fun !!<br>
+i'm working hard to get all the characters, places & decos. i'll update here accordingly !
+</div>
+<br><br><center>
+<img width="300" height="auto" src="https://i.imgur.com/WMuSzeT.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/M6ex1Vu.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/uzZKyZP.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/7yvTls1.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/uOw8ZFq.png"/>
 
 <br><br></center>
 </div>
