--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,155 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/oqD0APf.gif"/><img src="https://i.imgur.com/oqD0APf.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>july . 18 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/vNah8Qu.gif"/><br>
+do you like the new things in the projects ?<br>
+i worked hard to take time to update all of them, and i still have some things to do, so keep an eye open !<br>
+it's winter here, but every afternoon is comfortably warm and sunny <img src="https://i.imgur.com/i0Wk2eF.gif"/><br>
+so i felt i could get a little bit into the summer vibe of the northern hemisphere with this frog themed post !!<br>
+frogs are very good <img src="https://i.imgur.com/Y3kQTj1.gif"/> <img src="https://i.imgur.com/QqbfHkg.gif"/> <img src="https://i.imgur.com/O80RjZV.gif"/><br>
+/// i would like to thank everyone who has sent me very beautiful messages <img src="https://i.imgur.com/Wmzmf3y.gif"/><br>
+you are very precious little angels who give me inspiration to be productive and make others happy too ♡<br>
+all the criticisms of you help me a lot <img src="https://i.imgur.com/Y6YPGwD.gif"/><br>
+<br>
+i have some things to show you today, i'll start with a super cute dress up game i made yesterday :<br>
+<br><br>
+
+<center><a href="https://middlepot.com/bunnyshop" target="_blank"><img src="https://i.imgur.com/HPzVe1G.gif"/></a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/omE4Ax3.gif"/>&nbsp;&nbsp; { &nbsp;1503&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/SJEUa0i.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+it's very simple but i honestly love it, dress up flash games always make me nostalgic ; ;<br>
+i hope you like it too !!<br>
+<br>
+now, after a while, i made a very beautiful papercraft :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/oNny6F9.png"/></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1481&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+it's a train !! how cool is that ?<br>
+i realized a few days ago that my printer is out of ink, i wanted to print more papercrafts and saved a lot of things.. it was a bad surprise <img src="https://i.imgur.com/uNMeNH7.gif"/><br>
+<br>
+matching the cute frogs of today, a very magical & marshy melody :<br>
+<br><br>
+
+<center><a href="https://files.catbox.moe/xxc193.mp3" id="linkbjinho" target="_blank">will-o'-the-wisp .mp3</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_m2941852109033_"><img width="20px" height="auto" src="https://i.imgur.com/7zvWsMq.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_m29418521090233_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1BbhCBrS-TwJ0DIDqvG_DsTq32_d4nLXL"></script>
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_m2941852109233_"><img width="20px" height="auto" src="https://i.imgur.com/5w5TqhO.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_m29418521092333_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1wW1QVl2jIPVmXcPc2Xg8slCKibKI8oJZ"></script>
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+what do you think ?<br>
+i think it's lovely <img src="https://i.imgur.com/ChuJWcI.gif"/><br>
+<br>
+for today's q&a i decided to write about a rather controversial topic,,<br>
+i, indeed, feel a bit of apprehension. but i believe you will understand my point of view <img src="https://i.imgur.com/Xi8VIDT.gif"/><br>
+( please consider that this is the way i feel comfortable about dealing with it within my lifestyle )<br>
+<br><br>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+because of some things i've said before, people ask me about this : i'm not vegan, but i'm trying my best to be 100% cruelty-free !<br>
+veganism is not just about diet but also about products and lifestyle. i am completely in favor of using only cruelty-free products, which are not tested on animals, anything that is not natural and causes suffering is something i completely repudiate. having a healthy and natural lifestyle is something that i try hard to have ! well, i support all that part of veganism about being cruelty-free, but not the part of the diet. it's something very personal, so please don't take it as a criticism, it's just what i believe.<br>
+i'll start with the meat : i don't think eating meat is anything wrong, cruel or bad to do. it's a natural part of life and i see no problems about killing to feed. obviously, this goes a long way, since humans are not necessarily carnivorous, and we also have the rationality to avoid such things, but meat was ( and still is ) a very important part of the diet of most humans. not all people can really avoid the meat and replace it, it's very cultural and complicated. my biggest problem with meat is the cruelty involved in the process, animals that are bred only to die and live miserably, it makes me very sad and angry. a second problem are the hormones given to the animals so they grow up faster, it's extremely bizarre and disgusting, it does SO bad for the health of anyone !! for these reasons, i am seeking to limit myself to just eating meat from animals that have been properly reared, with a healthy, natural life, as was formerly the case. this is hard to find and also very expensive, but like i said, we do not need meat to survive anymore, so i think it's very plausible. i just can't eat meat from tortured animals like it was normal.<br>
+now, about milk and milk products in general, there is a big controversy about whether milk is bad or good for people's health. milk is obviously the most important food for a baby, but that is breast milk. the milk of other animals is not really needed for us, but if eaten properly, it can be very healthy. the milk can not be consumed in large quantities, but i don't think that it does bad unless you have some intolerance or allergy ( which is quite common, but not everyone has ). for me, the biggest problem about milk is how animals are treated horribly and full of hormones, same problems as meat. so i have to really do a lot of research to find good sources.<br>
+about eggs, it's a very important part of the human diet since ever, but of course, it can be replaced. however i have no problems with eggs, just with the treatment of animals, just like the above cases, i look for good sources.<br>
+commenting briefly, wearing fur and animal hide is horrible when they kill animals only for the luxury of vain humans. the skin and leather removed from animals that were killed for food is not something i see problem ( although i have problem with rearing animals in most cases, as i said earlier ). the skin of animals that died in natural ways is something i have nothing against !<br>
+finally, i want to comment on honey, which is somewhat controversial among people who adhere to veganism. i am not against honey or beekeeping, bees do not suffer in the process, it's quite the contrary, they live much better by having humans protecting them. they produce much more honey than they need, and using this extra honey is not wrong. the problem with beekeeping is that it should not be done all over the world, and it is. honeybees should not be living all over the world, but humans carried them everywhere, just for convenience. typical ignorant selfishness. the problem still is not for the bees but for other animals, other pollinators are extremely harmed by having their habitat invaded by bees that should not be there. different types of bees are natural from specific places. i support the breeding of bees in their proper habitats ( in reasonable quantities, obviously, the overpopulation of bees is not good anywhere ). this is not so difficult to find, since you can know the source of the honey you buy. depending on where you live, if it's one of the appropriate places, there may be local creators you can support ! research is the key for a good lifestyle.<br>
+<br><br>
+um, as usual, i didn't intend to write that much ; ;<br>
+but i hope you understand my point ///<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/pjvtkwy.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1486&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;1&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/oqD0APf.gif"/><img src="https://i.imgur.com/oqD0APf.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/><img src="https://i.imgur.com/ZX9Lcun.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
