--- a/status.html
+++ b/status.html
@@ -398,6 +398,26 @@ p { margin: 0; }
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 <div style="text-align: left;"><br><br>
+　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">08.22.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109088_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090288_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1HXhl4sWIHSxx_5UeD9GwjaqD6SFYv71T"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109288_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092388_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1-QQqpe0X7INRXEXfAF5t_jtFLuv7Bzs2"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">i'm feeling so light and shiny ♡ !</font>
+<br><br>
+<div style="text-align: left;"><br><br>
 　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">08.08.18</font>
 <body>
 <div style="float: right;">
@@ -576,26 +596,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">i had a very interesting "nightmare" last night, i love dreaming</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">05.17.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109088_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090288_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1HXhl4sWIHSxx_5UeD9GwjaqD6SFYv71T"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109288_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092388_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1-QQqpe0X7INRXEXfAF5t_jtFLuv7Bzs2"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">we can improve every day !</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
