--- a/potetomid.html
+++ b/potetomid.html
@@ -457,12 +457,12 @@ function getPosition(el) {
 
 <div style="position:absolute; left:10%; right:10%; line-height: 12px;">
 <center>
-<sub><sub><img src="https://i.imgur.com/7FepW5v.gif"/></sub></sub>　<font color="#c19797">potetomid music</font>　<sub><sub><img src="https://i.imgur.com/7FepW5v.gif"/></sub></sub>
+<sub><sub><img src="https://i.imgur.com/7FepW5v.gif"/></sub></sub>　<font color="#c19797">potetomid</font>　<sub><sub><img src="https://i.imgur.com/7FepW5v.gif"/></sub></sub>
 <br><br><br>
 </center>
 <font style="font-size: 8px;" color="#bcabab">
 my musical tastes has a lot of variety, i like a lot of different genres and some of them are a little unknown. it has always been a bit complicated for me to explain what kind of music i like for people who i just met, so i had an idea : why not organize all my tastes with playlists ? and it was a great idea, playlists are so fun !<br>
-i started making playlists on 8tracks, but the site had some changes that prevented me from listening to playlists like before, since i'm not from the region that they prioritized. i don't support this kind of prioritization between regions, so i decided to use youtube to make new playlists.<br>
+i started making playlists on 8tracks ( and my account name was potetomid ), but the site had some changes that prevented me from listening to playlists like before, since i'm not from the region that they prioritized. i don't support this kind of prioritization between regions, so i decided to use youtube to make new playlists.<br>
 i love to share new music with people, share the work of artists who do a fantastic job is something i really love to do. not all artists are appropriately recognized, and this is very sad.<br>
 besides, it's a lot of fun to discover new things, isn't it ? sometimes this can be a magical experience !<br>
 so in my free time, i'm making playlists. do you enjoy making playlists too ? share with me !
@@ -488,35 +488,6 @@ so in my free time, i'm making playlists. do you enjoy making playlists too ? sh
 <iframe width="400" height="225" src="https://www.youtube.com/embed/videoseries?list=PLsBmCEP2InOqw-dpeuMiTLpdAHuwoSrfM" frameborder="0" allowfullscreen></iframe>
 </center>
 <br><br>
-
-<center><iframe src="https://8tracks.com/mixes/6115823/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/fairy?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/7597452/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/story-before-bedtime?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/6113102/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/2000?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/6116034/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/morning-walk?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/6116271/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/milk?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/6116553/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/pixel?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/6343617/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/new-world-exploration?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/7182266/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe><p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/trick-or-treat?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-<br><br>
-<iframe src="https://8tracks.com/mixes/6114670/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe><p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="https://8tracks.com/potetomid/nightmare?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com/potetomid?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a><a href="https://8tracks.com?utm_medium=referral&utm_content=mix-page&utm_campaign=embed_button"></a></p>
-
-
-</center>
-<br>
 
 
 <br><br>
