--- a/links.html
+++ b/links.html
@@ -337,7 +337,7 @@ position: relative;
 
 <div id="stuff">
 <div style="position:absolute; left:25%; right:25%;">
-<br><br><br>
+<br><br><br><br>
 <style>
 #ooo { color: #9b8b8b; }
 #actv { color: #d1abab; }
@@ -381,8 +381,7 @@ if you have any questions about an account, please don't hesitate to contact me 
 <sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> inactive accs :</font><br>
 <br>
 <font color="#7a6b6b">fb </font><a id="inactv" title="profile" href="https://www.facebook.com/marjorinethatsme" target="_blank" >ഒ</a><br>
-<font color="#7a6b6b">ig </font><a id="inactv" title="profile" href="https://www.instagram.com/_midpot" target="_blank" >ഒ</a><br>
-<font color="#7a6b6b">8tr </font><a id="inactv" title="playlists" href="https://8tracks.com/potetomid" target="_blank" >ഒ</a><br>
+<font color="#7a6b6b">ig </font><a id="inactv" title="profile" href="https://www.instagram.com/mid.pot" target="_blank" >ഒ</a><br>
 <br><br><br>
 
 </div>
