--- a/about.html
+++ b/about.html
@@ -349,7 +349,7 @@ position: relative;
 <div id="spoiler1" class="spoiler-area is-closed">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="200" height="auto" src="https://i.imgur.com/vnurZ2j.png"/>
+<img width="200" height="auto" src="https://i.imgur.com/UOAG1Oi.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
