--- a/look-book.html
+++ b/look-book.html
@@ -391,9 +391,9 @@ function popcbox2(tid, tkey) {
 
 
 <sub><sub><a href="JavaScript:popcbox2('', '');"><img src="https://i.imgur.com/M0AS07B.gif"/></a></sub></sub>
-<br><br><br>
-<img src="https://i.imgur.com/WizIVxr.gif">
 <br><br><br><br>
+<img src="https://i.imgur.com/WizIVxr.gif">
+<br><br><br><br><br>
 
 <style>
 p { margin: 0; }
@@ -732,97 +732,6 @@ yay { cursor: pointer; }
 
 
 
-
-
-<style>
-p { margin: 0; }
-.spoiler-area3 {
-
-}
-.spoiler-area3.is-closed3 { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-</head>
-<body>
-
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><img src="https://i.imgur.com/YPvecsj.gif"/></sub></sub>　<a data-target="spoilerc1" class="btn-spoiler3">+ my looks</a></font></div>
-<div id="spoilerc1" class="spoiler-area3 is-closed3">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<div style="font-family: Verdana; font-size:8px;"><font color="#B49797">
-
-<br><br>
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 02.20.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="180px" height="auto" src="https://i.imgur.com/tNEbHpu.jpg"/><br><br>
-<font color="#B49797">/// umm this is not exactly a look pic, but i would like to post this and i don't know where, so
-<br><br>
-
-
-
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_l29418521090_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_l294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1TYLYW--fk8Kn6ZjSfiM1l2aWGdyJlUzq"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_l29418521092_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_l294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=16oPNLaKgU6VY1ukalhaWwpYK8wGRPC-E"></script>
-</div>
-</font></font>
-</body>
-</center>
-
-
-
-<br><br><br><br><br>
-
-
-
-</font></div>
-
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<script>
-(function(){
-    "use strict";
-    var $btnsc = document.querySelectorAll('.btn-spoiler3');
-    function loop($elsc, cbc) {
-        var ic = $elsc.length;
-        while(ic--) {
-            cbc($elsc[ic]);
-        }
-    }
-    loop($btnsc, function($btnc){
-        $btnc.addEventListener("click", function(){
-            var $spoilerc = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ my looks" ){
-                this.innerHTML = "- my looks";
-                $spoilerc.classList.remove("is-closed3");
-            } else {
-                this.innerHTML = "+ my looks";
-                $spoilerc.classList.add("is-closed3");
-            }
-        });
-
-    });
-
-}());
-</script>
-<br>
-
-
-
-
-
-
-
-
-
 <style>
 p { margin: 0; }
 .spoiler-area4 {
@@ -833,16 +742,17 @@ p { margin: 0; }
 </head>
 <body>
 
-<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><img src="https://i.imgur.com/UYUfR9R.gif"/></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4">+ my face</a></font></div>
+<div style="font-family: Verdana; font-size:8px;"><font color="#a88d8d"><sub><sub><img src="https://i.imgur.com/UYUfR9R.gif"/></sub></sub>　<a data-target="spoilerd1" class="btn-spoiler4">+ myself</a></font></div>
 <div id="spoilerd1" class="spoiler-area4 is-closed4">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <br><br>
 
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.12.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="180px" height="auto" src="https://i.imgur.com/w6sQUoc.png"/><br><br>
-<font color="#B49797">soft sunshine
+<font color="#bca6a0"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub>　( these pictures are temporary )　<sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <br><br>
+
+<img width="200px" height="auto" src="https://i.imgur.com/Ay48NUx.jpg"/><br><br>
+<br>
 
 
 
@@ -868,10 +778,8 @@ yay { cursor: pointer; }
 
 
 <br><br><br><br><br>
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.16.17 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="180px" height="auto" src="https://i.imgur.com/G4UgZbX.png"/><br><br>
-<font color="#B49797">super super messy *`꒳´ * )
-<br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/OpWzrc5.png"/><br><br>
+<br>
 
 
 
@@ -897,10 +805,8 @@ yay { cursor: pointer; }
 
 
 <br><br><br><br><br>
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.17.17 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="180px" height="auto" src="https://i.imgur.com/ZgxGpJp.png"/><br><br>
-<font color="#B49797">well i have this mark on my neck since ever, what do you think about birthmarks ? i'm neutral about mine !
-<br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/lemlujq.jpg"/><br><br>
+<br>
 
 
 
@@ -925,10 +831,8 @@ yay { cursor: pointer; }
 
 
 <br><br><br><br><br>
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.17.17 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/ZRCX4Ge.png"/><br><br>
-<font color="#B49797">i really like these pics, because my eyes looks more blue than they normally are, it's interesting ! they are usually more... gray ? kinda greenish
-<br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/fKHSMGe.jpg"/><br><br>
+<br>
 
 
 
@@ -951,65 +855,6 @@ yay { cursor: pointer; }
 </body>
 </center>
 
-<br><br><br><br><br>
-
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> ??.??.?? <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="180px" height="auto" src="https://i.imgur.com/qbgq32e.png"/><br><br>
-<font color="#B49797">just reposting me and kobopofo ♡
-<br><br>
-
-
-
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_f2941852109022_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_f29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=10YFIT7xC5sV0v0vRx5TjiYKo737Wrwd7"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_f2941852109222_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_f29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1M2NboxbF6flgItidxJzNeePy2-EZiPsX"></script>
-</div>
-</font></font>
-</body>
-</center>
-
-
-<br><br><br><br><br>
-
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> ??.??.?? <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="180px" height="auto" src="https://i.imgur.com/BxaAiav.png"/><br><br>
-<font color="#B49797">reposting me and my flu ♡ ( ? )
-<br><br>
-
-
-
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_f29418521090_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_f294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1oz0IFpfnTASn6nGz4iW0DHShG2dDPsTe"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_f29418521092_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_f294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1bIWz-I1DW1ejlkt7a190SHtbz5Km3H3D"></script>
-</div>
-</font></font>
-</body>
-</center>
-
-
-
 
 <br><br><br><br><br>
 
@@ -1031,11 +876,11 @@ yay { cursor: pointer; }
     loop($btnsd, function($btnd){
         $btnd.addEventListener("click", function(){
             var $spoilerd = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ my face" ){
-                this.innerHTML = "- my face";
+            if( this.innerHTML === "+ myself" ){
+                this.innerHTML = "- myself";
                 $spoilerd.classList.remove("is-closed4");
             } else {
-                this.innerHTML = "+ my face";
+                this.innerHTML = "+ myself";
                 $spoilerd.classList.add("is-closed4");
             }
         });
